--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,8 @@ tqdm  # Used widely
 ujson  # Used in serialiation_callback.py
 
 # torch==2.0.1
-torchvision==0.15.2
+# torchvision==0.15.2
+torchvision
 pytorch-lightning==2.2.1
 # tensorboard==2.16.2
 protobuf==4.25.3
